--- a/frontend/editar-tema.html
+++ b/frontend/editar-tema.html
@@ -2,21 +2,38 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Crear Nuevo Tema</title>
+  <title>Editar Tema</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer>
-    async function crear(event) {
+    const params = new URLSearchParams(window.location.search);
+    const temaId = params.get('id');
+
+    async function cargarTema() {
+      const res = await fetch('http://localhost:3000/api/temas', {
+        headers: { 'Authorization': 'Bearer ' + localStorage.getItem('token') }
+      });
+      const temas = await res.json();
+      const tema = temas.find(t => t.id == temaId);
+      if (!tema) {
+        mostrarMensaje("Tema no encontrado", false);
+        return;
+      }
+      document.getElementById('titulo').value = tema.titulo;
+      document.getElementById('contenido').value = tema.contenido;
+    }
+
+    async function actualizar(event) {
       event.preventDefault();
       const titulo = document.getElementById('titulo').value.trim();
       const contenido = document.getElementById('contenido').value.trim();
 
       if (!titulo || !contenido) {
-        mostrarMensaje('Por favor completa todos los campos.', false);
+        mostrarMensaje("Por favor completa todos los campos", false);
         return;
       }
 
-      const res = await fetch('http://localhost:3000/api/tema', {
-        method: 'POST',
+      const res = await fetch(`http://localhost:3000/api/tema/${temaId}`, {
+        method: 'PUT',
         headers: {
           'Content-Type': 'application/json',
           'Authorization': 'Bearer ' + localStorage.getItem('token')
@@ -25,10 +42,10 @@
       });
 
       if (res.ok) {
-        mostrarMensaje('Tema creado correctamente.', true);
+        mostrarMensaje("Tema actualizado correctamente", true);
         setTimeout(() => window.location.href = 'dashboard.html', 1500);
       } else {
-        mostrarMensaje('Error al crear el tema.', false);
+        mostrarMensaje("Error al actualizar el tema", false);
       }
     }
 
@@ -39,25 +56,27 @@
         ? 'text-green-600 bg-green-100 border border-green-300 p-2 rounded mt-4'
         : 'text-red-600 bg-red-100 border border-red-300 p-2 rounded mt-4';
     }
+
+    window.onload = cargarTema;
   </script>
 </head>
 <body class="min-h-screen bg-gray-100 flex items-center justify-center font-sans">
   <div class="bg-white shadow-lg rounded-lg p-8 w-full max-w-xl">
-    <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Crear Nuevo Tema</h1>
-    <form onsubmit="crear(event)" class="space-y-5">
+    <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Editar Tema</h1>
+    <form onsubmit="actualizar(event)" class="space-y-5">
       <div>
         <label for="titulo" class="block mb-1 font-medium text-gray-700">Título</label>
-        <input type="text" id="titulo" placeholder="Ej. Tema 1. Representación de la información"
-          class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400">
+        <input type="text" id="titulo"
+          class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-yellow-400">
       </div>
       <div>
         <label for="contenido" class="block mb-1 font-medium text-gray-700">Contenido</label>
-        <textarea id="contenido" placeholder="Escribe el contenido del tema aquí..."
-          class="w-full border border-gray-300 rounded px-3 py-2 h-40 resize-y focus:outline-none focus:ring-2 focus:ring-blue-400"></textarea>
+        <textarea id="contenido"
+          class="w-full border border-gray-300 rounded px-3 py-2 h-40 resize-y focus:outline-none focus:ring-2 focus:ring-yellow-400"></textarea>
       </div>
       <button type="submit"
-        class="w-full bg-blue-600 text-white font-semibold py-2 rounded hover:bg-blue-700 transition duration-200">
-        Guardar Tema
+        class="w-full bg-yellow-500 text-white font-semibold py-2 rounded hover:bg-yellow-600 transition duration-200">
+        Guardar Cambios
       </button>
       <a href="dashboard.html" class="block text-center text-blue-500 mt-3 hover:underline">← Volver al Dashboard</a>
     </form>
