--- a/frontend/feedback.html
+++ b/frontend/feedback.html
@@ -2,12 +2,33 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Feedback</title>
+  <title>Enviar Feedback</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <script defer>
+    async function cargarTemas() {
+      const res = await fetch('http://localhost:3000/api/temas', {
+        headers: { 'Authorization': 'Bearer ' + localStorage.getItem('token') }
+      });
+      const temas = await res.json();
+      const select = document.getElementById('temaId');
+      temas.forEach(t => {
+        const option = document.createElement('option');
+        option.value = t.id;
+        option.textContent = t.titulo || `Tema sin título (${t.id})`;
+        select.appendChild(option);
+      });
+    }
+
     async function enviar(event) {
       event.preventDefault();
       const temaId = document.getElementById('temaId').value;
-      const comentario = document.getElementById('comentario').value;
+      const comentario = document.getElementById('comentario').value.trim();
+
+      if (!comentario) {
+        alert("Por favor, escribe un comentario.");
+        return;
+      }
+
       const res = await fetch('http://localhost:3000/api/feedback', {
         method: 'POST',
         headers: {
@@ -16,20 +37,39 @@
         },
         body: JSON.stringify({ temaId, comentario })
       });
+
       if (res.ok) {
         alert('Feedback enviado');
         window.location.href = 'dashboard.html';
+      } else {
+        alert('Error al enviar feedback');
       }
     }
+
+    window.onload = cargarTemas;
   </script>
-  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="p-4">
-  <h1 class="text-2xl mb-4">Enviar Feedback</h1>
-  <form onsubmit="enviar(event)" class="space-y-4">
-    <input type="number" id="temaId" placeholder="ID del tema" class="border p-2 w-full"><br>
-    <textarea id="comentario" placeholder="Comentario" class="border p-2 w-full h-40"></textarea><br>
-    <button class="bg-purple-500 text-white px-4 py-2">Enviar</button>
-  </form>
+<body class="min-h-screen bg-gray-100 flex items-center justify-center font-sans">
+  <div class="bg-white p-8 rounded shadow-lg w-full max-w-xl">
+    <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Enviar Feedback</h1>
+    <form onsubmit="enviar(event)" class="space-y-4">
+      <div>
+        <label for="temaId" class="block mb-1 font-medium text-gray-700">Selecciona un tema</label>
+        <select id="temaId" class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-purple-400" required>
+          <option value="" disabled selected>-- Selecciona un tema --</option>
+        </select>
+      </div>
+      <div>
+        <label for="comentario" class="block mb-1 font-medium text-gray-700">Comentario</label>
+        <textarea id="comentario" placeholder="Escribe tu comentario..."
+          class="w-full border border-gray-300 rounded px-3 py-2 h-40 resize-y focus:outline-none focus:ring-2 focus:ring-purple-400"></textarea>
+      </div>
+      <button type="submit"
+        class="w-full bg-purple-600 text-white font-semibold py-2 rounded hover:bg-purple-700 transition duration-200">
+        Enviar Feedback
+      </button>
+      <a href="dashboard.html" class="block text-center text-blue-500 mt-3 hover:underline">← Volver al Dashboard</a>
+    </form>
+  </div>
 </body>
 </html>
