--- a/frontend/crear-tema.html
+++ b/frontend/crear-tema.html
@@ -4,31 +4,105 @@
   <meta charset="UTF-8">
   <title>Crear Nuevo Tema</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script defer>
+</head>
+<body class="bg-gray-100 min-h-screen">
+
+  <!-- Loader -->
+  <div id="loader" class="hidden fixed inset-0 bg-gray-100 bg-opacity-75 flex items-center justify-center z-50">
+    <img src="./assets/logo.png" alt="Cargando..." class="w-20 h-20 animate-spin">
+  </div>
+
+  <!-- Header -->
+  <header class="bg-white shadow-md fixed top-0 left-0 w-full z-10">
+    <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+      <!-- Logotipo -->
+      <a href="index.html" class="flex items-center space-x-2">
+        <img src="./assets/logo.png" alt="Águila Plateada" class="w-10 h-10">
+        <span class="text-xl font-bold text-gray-800">Oposiciones App</span>
+      </a>
+
+      <!-- Menú de usuario -->
+      <div class="relative">
+        <button id="userMenuButton" class="flex items-center space-x-2 focus:outline-none">
+          <img src="./assets/user.png" alt="Usuario" class="w-10 h-10 rounded-full border border-gray-300">
+        </button>
+        <div id="userMenu" class="hidden absolute right-0 mt-2 w-48 bg-white border border-gray-200 rounded shadow-md">
+          <a href="dashboard.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Dashboard</a>
+          <button onclick="logout()" class="block w-full text-left px-4 py-2 text-gray-700 hover:bg-gray-100">Cerrar sesión</button>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- Contenido principal -->
+  <main class="mt-20 flex items-center justify-center">
+    <div class="bg-white shadow-lg rounded-lg p-8 w-full max-w-xl">
+      <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Crear Nuevo Tema</h1>
+      <form onsubmit="crear(event)" class="space-y-5">
+        <div>
+          <label for="titulo" class="block mb-1 font-medium text-gray-700">Título</label>
+          <input type="text" id="titulo" placeholder="Ej. Tema 1. Representación de la información"
+            class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400">
+        </div>
+        <div>
+          <label for="contenido" class="block mb-1 font-medium text-gray-700">Contenido</label>
+          <textarea id="contenido" placeholder="Escribe el contenido del tema aquí..."
+            class="w-full border border-gray-300 rounded px-3 py-2 h-40 resize-y focus:outline-none focus:ring-2 focus:ring-blue-400"></textarea>
+        </div>
+        <button id="submitButton" type="submit"
+          class="w-full bg-blue-600 text-white font-semibold py-2 rounded hover:bg-blue-700 transition duration-200">
+          Guardar Tema
+        </button>
+        <a href="dashboard.html" class="block text-center text-blue-500 mt-3 hover:underline">← Volver al Dashboard</a>
+      </form>
+      <div id="mensaje" class="text-center"></div>
+    </div>
+  </main>
+
+  <script>
     async function crear(event) {
       event.preventDefault();
+
+      const loader = document.getElementById('loader');
+      const submitButton = document.getElementById('submitButton');
       const titulo = document.getElementById('titulo').value.trim();
       const contenido = document.getElementById('contenido').value.trim();
 
+      // Mostrar el loader y deshabilitar el botón
+      loader.classList.remove('hidden');
+      submitButton.disabled = true;
+
       if (!titulo || !contenido) {
         mostrarMensaje('Por favor completa todos los campos.', false);
+        loader.classList.add('hidden'); // Ocultar el loader
+        submitButton.disabled = false; // Habilitar el botón
         return;
       }
 
-      const res = await fetch('http://localhost:3000/api/tema', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-          'Authorization': 'Bearer ' + localStorage.getItem('token')
-        },
-        body: JSON.stringify({ titulo, contenido })
-      });
+      try {
+        const res = await fetch('http://localhost:3000/api/tema', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'Authorization': 'Bearer ' + localStorage.getItem('token')
+          },
+          body: JSON.stringify({ titulo, contenido })
+        });
 
-      if (res.ok) {
-        mostrarMensaje('Tema creado correctamente.', true);
-        setTimeout(() => window.location.href = 'dashboard.html', 1500);
-      } else {
-        mostrarMensaje('Error al crear el tema.', false);
+        if (res.ok) {
+          mostrarMensaje('Tema creado correctamente.', true);
+          setTimeout(() => {
+            window.location.href = 'dashboard.html';
+          }, 1000); // Retraso de 1 segundo
+        } else {
+          mostrarMensaje('Error al crear el tema.', false);
+        }
+      } catch (error) {
+        console.error('Error al crear el tema:', error);
+        mostrarMensaje('Ocurrió un error al crear el tema.', false);
+      } finally {
+        loader.classList.add('hidden'); // Ocultar el loader
+        submitButton.disabled = false; // Habilitar el botón
       }
     }
 
@@ -39,29 +113,22 @@
         ? 'text-green-600 bg-green-100 border border-green-300 p-2 rounded mt-4'
         : 'text-red-600 bg-red-100 border border-red-300 p-2 rounded mt-4';
     }
+
+    window.onload = () => {
+      const token = localStorage.getItem('token');
+      if (!token) window.location.href = 'login.html';
+
+      const userMenuButton = document.getElementById('userMenuButton');
+      const userMenu = document.getElementById('userMenu');
+      userMenuButton.addEventListener('click', () => {
+        userMenu.classList.toggle('hidden');
+      });
+    };
+
+    function logout() {
+      localStorage.removeItem('token');
+      window.location.href = 'login.html';
+    }
   </script>
-</head>
-<body class="min-h-screen bg-gray-100 flex items-center justify-center font-sans">
-  <div class="bg-white shadow-lg rounded-lg p-8 w-full max-w-xl">
-    <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Crear Nuevo Tema</h1>
-    <form onsubmit="crear(event)" class="space-y-5">
-      <div>
-        <label for="titulo" class="block mb-1 font-medium text-gray-700">Título</label>
-        <input type="text" id="titulo" placeholder="Ej. Tema 1. Representación de la información"
-          class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400">
-      </div>
-      <div>
-        <label for="contenido" class="block mb-1 font-medium text-gray-700">Contenido</label>
-        <textarea id="contenido" placeholder="Escribe el contenido del tema aquí..."
-          class="w-full border border-gray-300 rounded px-3 py-2 h-40 resize-y focus:outline-none focus:ring-2 focus:ring-blue-400"></textarea>
-      </div>
-      <button type="submit"
-        class="w-full bg-blue-600 text-white font-semibold py-2 rounded hover:bg-blue-700 transition duration-200">
-        Guardar Tema
-      </button>
-      <a href="dashboard.html" class="block text-center text-blue-500 mt-3 hover:underline">← Volver al Dashboard</a>
-    </form>
-    <div id="mensaje" class="text-center"></div>
-  </div>
 </body>
 </html>
