--- a/frontend/editar-tema.html
+++ b/frontend/editar-tema.html
@@ -57,30 +57,61 @@
         : 'text-red-600 bg-red-100 border border-red-300 p-2 rounded mt-4';
     }
 
+    function logout() {
+      localStorage.removeItem('token');
+      window.location.href = 'index.html';
+    }
+
     window.onload = cargarTema;
   </script>
 </head>
-<body class="min-h-screen bg-gray-100 flex items-center justify-center font-sans">
-  <div class="bg-white shadow-lg rounded-lg p-8 w-full max-w-xl">
-    <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Editar Tema</h1>
-    <form onsubmit="actualizar(event)" class="space-y-5">
-      <div>
-        <label for="titulo" class="block mb-1 font-medium text-gray-700">Título</label>
-        <input type="text" id="titulo"
-          class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-yellow-400">
+<body class="bg-gray-100 min-h-screen">
+
+  <!-- Header -->
+  <header class="bg-white shadow-md fixed top-0 left-0 w-full z-10">
+    <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+      <!-- Logotipo -->
+      <a href="index.html" class="flex items-center space-x-2">
+        <img src="./assets/logo.png" alt="Águila Plateada" class="w-10 h-10">
+        <span class="text-xl font-bold text-gray-800">Oposiciones App</span>
+      </a>
+
+      <!-- Menú de usuario -->
+      <div class="relative">
+        <button id="userMenuButton" class="flex items-center space-x-2 focus:outline-none">
+          <img src="./assets/user.png" alt="Usuario" class="w-10 h-10 rounded-full border border-gray-300">
+        </button>
+        <div id="userMenu" class="hidden absolute right-0 mt-2 w-48 bg-white border border-gray-200 rounded shadow-md">
+          <a href="dashboard.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Dashboard</a>
+          <button onclick="logout()" class="block w-full text-left px-4 py-2 text-gray-700 hover:bg-gray-100">Cerrar sesión</button>
+        </div>
       </div>
-      <div>
-        <label for="contenido" class="block mb-1 font-medium text-gray-700">Contenido</label>
-        <textarea id="contenido"
-          class="w-full border border-gray-300 rounded px-3 py-2 h-40 resize-y focus:outline-none focus:ring-2 focus:ring-yellow-400"></textarea>
-      </div>
-      <button type="submit"
-        class="w-full bg-yellow-500 text-white font-semibold py-2 rounded hover:bg-yellow-600 transition duration-200">
-        Guardar Cambios
-      </button>
-      <a href="dashboard.html" class="block text-center text-blue-500 mt-3 hover:underline">← Volver al Dashboard</a>
-    </form>
-    <div id="mensaje" class="text-center"></div>
-  </div>
+    </div>
+  </header>
+
+  <!-- Contenido principal -->
+  <main class="mt-20 flex items-center justify-center">
+    <div class="bg-white shadow-lg rounded-lg p-8 w-full max-w-xl">
+      <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Editar Tema</h1>
+      <form onsubmit="actualizar(event)" class="space-y-5">
+        <div>
+          <label for="titulo" class="block mb-1 font-medium text-gray-700">Título</label>
+          <input type="text" id="titulo"
+            class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-yellow-400">
+        </div>
+        <div>
+          <label for="contenido" class="block mb-1 font-medium text-gray-700">Contenido</label>
+          <textarea id="contenido"
+            class="w-full border border-gray-300 rounded px-3 py-2 h-40 resize-y focus:outline-none focus:ring-2 focus:ring-yellow-400"></textarea>
+        </div>
+        <button type="submit"
+          class="w-full bg-yellow-500 text-white font-semibold py-2 rounded hover:bg-yellow-600 transition duration-200">
+          Guardar Cambios
+        </button>
+        <a href="dashboard.html" class="block text-center text-blue-500 mt-3 hover:underline">← Volver al Dashboard</a>
+      </form>
+      <div id="mensaje" class="text-center"></div>
+    </div>
+  </main>
 </body>
 </html>
