--- a/frontend/register.html
+++ b/frontend/register.html
@@ -1,35 +1,69 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registro</title>
-  <script defer>
-    async function register(event) {
-      event.preventDefault();
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
-      const res = await fetch('http://localhost:3000/api/register', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ username, password })
-      });
-      const data = await res.json();
-      if (res.ok) {
-        alert('Registrado con éxito');
-        window.location.href = 'login.html';
-      } else {
-        alert(data.message);
-      }
-    }
-  </script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="p-4">
-  <h1 class="text-2xl mb-4">Registro</h1>
-  <form onsubmit="register(event)" class="space-y-4">
-    <input type="text" id="username" placeholder="Usuario" class="border p-2 w-full"><br>
-    <input type="password" id="password" placeholder="Contraseña" class="border p-2 w-full"><br>
-    <button class="bg-green-500 text-white px-4 py-2">Registrarse</button>
-  </form>
+<body class="bg-gray-100 flex items-center justify-center h-screen">
+  <div class="bg-white p-8 rounded-lg shadow-lg w-96">
+    <h2 class="text-2xl font-bold mb-6 text-center">Registro</h2>
+    <form id="registerForm" class="space-y-4">
+      <div>
+        <label for="username" class="block text-sm font-medium text-gray-700">Usuario</label>
+        <input type="text" id="username" name="username" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" required>
+      </div>
+      <div>
+        <label for="password" class="block text-sm font-medium text-gray-700">Contraseña</label>
+        <input type="password" id="password" name="password" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" required>
+      </div>
+      <button type="submit" class="w-full bg-green-500 text-white py-2 px-4 rounded-md hover:bg-green-600">Registrarse</button>
+    </form>
+    <p id="responseMessage" class="text-sm mt-4 hidden"></p>
+    <p class="text-center mt-4 text-sm">
+      ¿Ya tienes una cuenta? <a href="login.html" class="text-blue-500 hover:underline">Inicia sesión</a>
+    </p>
+  </div>
+
+  <script>
+    const registerForm = document.getElementById('registerForm');
+    const responseMessage = document.getElementById('responseMessage');
+
+    registerForm.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
+
+      try {
+        const response = await fetch('http://localhost:3000/api/register', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({ username, password }),
+        });
+
+        const data = await response.json();
+
+        if (response.ok) {
+          responseMessage.textContent = 'Registro exitoso. Redirigiendo al login...';
+          responseMessage.classList.remove('hidden', 'text-red-500');
+          responseMessage.classList.add('text-green-500');
+          setTimeout(() => {
+            window.location.href = 'login.html'; // Redirigir al login
+          }, 2000);
+        } else {
+          responseMessage.textContent = data.message || 'Error al registrarse';
+          responseMessage.classList.remove('hidden', 'text-green-500');
+          responseMessage.classList.add('text-red-500');
+        }
+      } catch (error) {
+        responseMessage.textContent = 'Error de conexión con el servidor';
+        responseMessage.classList.remove('hidden', 'text-green-500');
+        responseMessage.classList.add('text-red-500');
+      }
+    });
+  </script>
 </body>
 </html>
